--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "http://wix.perlcos.com/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --history-api-fallback",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
